--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
-	"name": "ass_nss_fe",
-	"version": "0.0.0",
-	"private": true,
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "vite build",
-		"preview": "vite preview",
-		"format": "prettier --write .",
-		"lint": "prettier --check ."
-	},
-	"dependencies": {
-		"@mdi/font": "^7.4.47",
-		"@vuepic/vue-datepicker": "^8.4.0",
-		"axios": "^1.6.8",
-		"jwt-decode": "^4.0.0",
-		"moment": "^2.30.1",
-		"pinia": "^2.1.7",
-		"vue": "^3.4.21",
-		"vue-router": "^4.3.0",
-		"vuetify": "^3.5.9",
-		"webfontloader": "^1.6.28"
-	},
-	"devDependencies": {
-		"@iconify/vue": "^4.1.1",
-		"@vitejs/plugin-vue": "^5.0.4",
-		"autoprefixer": "^10.4.18",
-		"postcss": "^8.4.37",
-		"prettier": "^3.2.5",
-		"tailwindcss": "^3.4.1",
-		"vite": "^5.1.6",
-		"vue-cli-plugin-vuetify": "^2.5.8",
-		"webpack-plugin-vuetify": "^3.0.3"
-	}
+  "name": "ass_nss_fe",
+  "version": "0.0.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "format": "prettier .  --write",
+    "lint": "prettier --check ."
+  },
+  "dependencies": {
+    "@mdi/font": "^7.4.47",
+    "@vuepic/vue-datepicker": "^8.4.0",
+    "axios": "^1.6.8",
+    "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
+    "pinia": "^2.1.7",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0",
+    "vuetify": "^3.5.9",
+    "webfontloader": "^1.6.28"
+  },
+  "devDependencies": {
+    "@iconify/vue": "^4.1.1",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.37",
+    "prettier": "^3.5.2",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.1.6",
+    "vue-cli-plugin-vuetify": "^2.5.8",
+    "webpack-plugin-vuetify": "^3.0.3"
+  }
 }
