--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
-    "vuetify": "^3.5.9",
-    "webfontloader": "^1.6.28"
+    "vuetify": "^3.8.4",
+    "webfontloader": "^1.6.28",
+    "vue-i18n": "11.1.3"
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.1",
